# sobit_mini

./: CHANGELOG.rst  README.en.md  README.md  install.sh  sobit_setup.sh
sobit_mini_bringup/: CMakeLists.txt  README.md  package.xml
sobit_mini_bringup/launch/: 3dsensor.launch  mini_realsense.launch  minimal.launch  ps3_control.launch  ps4_control.launch  realsense.launch  urg.launch
sobit_mini_bringup/launch/includes/: description_sobit_mini.launch.xml  openni2.launch.xml  robot_sobit_mini.launch.xml  xtion_pro.launch.xml
sobit_mini_bringup/scripts/: sobit_mini_ps3_control.py  sobit_mini_ps4_control.py
sobit_mini_bringup/src/: initial_joint_publisher.py  joint_controller.py  sobit_mini_ps3_control.py  sobit_mini_ps4_control.py  wheel_controller(backup).py  wheel_controller.py
sobit_mini_control/: CMakeLists.txt  README.md  package.xml
sobit_mini_control/config/: debug.csv  debug_read.csv  debug_write.csv  initial_joint_ang.yaml  joint_limit.yaml  position_control.yaml  state_control_arm.yaml  state_control_body.yaml  state_control_dynamixel_arm.yaml  state_control_dynamixel_arm_head.yaml  state_control_dynamixel_body.yaml  state_control_dynamixel_head.yaml  state_control_dynamixel_l_arm.yaml  state_control_dynamixel_r_arm.yaml  state_control_head.yaml  state_control_l_arm.yaml  state_control_r_arm.yaml
sobit_mini_control/config/save/: debug_read.csv  debug_write.csv
sobit_mini_control/include/sobit_mini_control/: dynamixel_control.h  dynamixel_port_control.h  dynamixel_setting.h  sobit_common_dynamixel.h  sobit_mini_hw.h
sobit_mini_control/launch/: sobit_mini_control.launch
sobit_mini_control/src/: dynamixel_control.cpp  dynamixel_port_control.cpp  dynamixel_setting.cpp  sobit_common_dynamixel.cpp  sobit_mini_control.cpp  sobit_mini_dynamixel(バックアップ).cpp  sobit_mini_dynamixel.cpp  sobit_mini_hw.cpp
sobit_mini_description/: CMakeLists.txt  README.md  package.xml
sobit_mini_description/launch/: display.launch  urdf_check.launch
sobit_mini_description/meshes/: Manipulator_X4_Gripper_fix.dae  arm1_left.dae  arm1_right.dae  arm2_left.dae  arm2_right.dae  mini_sobit_body.dae  shoulder1.dae  sobit hed_neck.dae  sobit_mini_arm.dae  sobit_mini_big_gear.dae  sobit_mini_center_back.dae  sobit_mini_center_front.dae  sobit_mini_hand.dae  sobit_mini_head_neck.dae  sobit_mini_shoulder1.dae  sobit_mini_shoulder2.dae  sobit_mini_small_gear.dae  sobit_mini_urg_sup.dae
sobit_mini_description/meshes/L_hand/: L_hand_finger_l_joint.stl  L_hand_finger_r_joint.stl
sobit_mini_description/meshes/R_hand/: R_hand_finger_l_joint.stl  R_hand_finger_r_joint.stl
sobit_mini_description/meshes/body/: big_gear_base.stl  pole_bottom_39mm.stl  pole_middle_134mm.stl  sobit_mini_big_gear.stl  sobit_mini_body_cover.dae  sobit_mini_center_back.stl  sobit_mini_small_gear_motor.stl  spine.stl
sobit_mini_description/meshes/sensor/: mic.stl
sobit_mini_description/model/dae/: ManipulatorX4_Finger_left.dae  ManipulatorX4_Finger_right.dae  mini_sobit_body_size_fix.dae
sobit_mini_description/model/urdf/: frames.gv  kobuki.urdf.xacro  kobuki_hexagons_asus_xtion_pro_offset_turtlebot_op.urdf.xacro  sobit_mini_description.gv  sobit_mini_description.urdf  sobit_mini_description_common_library.urdf.xacro  sobit_mini_description_common_library_memo.urdf.xacro  sobit_mini_description_common_library_memo_3.urdf.xacro
sobit_mini_description/model/urdf/stacks/: sobit_mini_description_hexagons.urdf.xacro
sobit_mini_description/robots/: backup.xacro  base.urdf  robot_LRF.launch  robot_v04.urdf  sobit_mini.gv  sobit_mini.sdf  sobit_mini.urdf  sobit_mini.urdf.xacro  sobit_mini_urdf_gazebo.launch  test.urdf  test_gazebo.launch  test_rviz.launch  turtlebot_gazebo.launch
sobit_mini_description/rviz/: display.rviz  robot.rviz  urdf_debug.rviz
sobit_mini_description/urdf/: common.xacro  materials.urdf.xacro
sobit_mini_description/urdf/base/: base.urdf  base.urdf.xacro
sobit_mini_description/urdf/body/: body.transmission.xacro  body.urdf.xacro
sobit_mini_description/urdf/head/: head.urdf.xacro
sobit_mini_description/urdf/left_arm/: left_arm.transmission.xacro  left_arm.urdf.xacro
sobit_mini_description/urdf/left_hand/: left_hand.transmission.xacro  left_hand.urdf.xacro
sobit_mini_description/urdf/ribs/: ribs.urdf.xacro
sobit_mini_description/urdf/right_arm/: right_arm(バックアップ).urdf.xacro  right_arm.transmission.xacro  right_arm.urdf.xacro
sobit_mini_description/urdf/right_hand/: right_hand.transmission.xacro  right_hand.urdf.xacro
sobit_mini_description/urdf/sensor/: lidar.urdf.xacro  mic.urdf.xacro  real_sense.urdf.xacro  realsense_d435.urdf.xacro  urg.urdf.xacro  xtion(バックアップ).urdf.xacro  xtion.urdf.xacro  xtion_properties.urdf.xacro
sobit_mini_description/urdf/stacks/: stacks.urdf.xacro
sobit_mini_description/urdf/urg_sup/: urg_sup.urdf.xacro
sobit_mini_library/: CMakeLists.txt  README.md  package.xml
sobit_mini_library/config/: sobit_mini_pose.yaml
sobit_mini_library/example/: test_arm_controll.py  test_arm_grasp.py  test_control_arm.cpp  test_control_arm.py  test_control_head.cpp  test_control_head.py  test_control_wheel.cpp  test_control_wheel.py  test_grasp.cpp  test_grasp.py  test_pantilt_controll.py  test_wheel.py
sobit_mini_library/include/sobit_mini_library/: sobit_mini_controller.hpp  sobit_mini_joint_controller.hpp  sobit_mini_library.h  sobit_mini_wheel_controller.hpp  sobit_turtlebot_controller.hpp
sobit_mini_library/launch/: load_sobit_mini_pose.launch
sobit_mini_library/src/: sobit_mini_controller.cpp  sobit_mini_joint_controller.cpp  sobit_mini_pybind.cpp  sobit_mini_wheel_controller.cpp  sobit_turtlebot_controller.cpp
