<?xml version="1.0"?>
<package>
  <name>sobit_mini_bringup</name>
  <version>0.0.0</version>
  <description>The sobit_mini_bringup package</description>

  <maintainer email="sobit-x6@todo.todo">sobit-x6</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sobit_common_msg</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>sobit_common_msg</run_depend>

</package>
