<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sobit_mini_control</name>
  <version>0.0.0</version>
  <description>
    This package allows shared configuration with SOBITS robots
  </description>

  <maintainer email="sakuyuu2002@gmail.com">Yuusaku Hanajima</maintainer>

  <license>BSD</license>

  <url type="website">https://home.soka.ac.jp/~choi/index.html</url>
  <url type="repository">https://github.com/TeamSOBITS/sobit_common</url>
  <url type="bugtracker">https://github.com/TeamSOBITS/sobit_common/issues</url>
  <author email="choi.7f@gmail.com">Team SOBITS</author>


  <!-- この塊はsobit_commonの命名が書き換えられたら消す -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sobit_common_msg</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sobit_common_msg</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sobit_common_msg</exec_depend>
  <!--:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::-->


  <!-- 消したらコメントアウト消す -->
  <!-- <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamixel_sdk</depend>
  <depend>sobits_msgs</depend>
  <depend>sobits_common</depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
